--- a/src/App.css
+++ b/src/App.css
@@ -50,6 +50,8 @@
   box-shadow: 0 0 20px 0 #ccc;
   opacity: 1;
   transition: opacity 0.5s linear;
+  z-index: 9999;
+  cursor: pointer;
 }
 
 .backArrow {
